snapshots/syntax/statements/control_flow/jump/goto_statement_forward_jump.snap
---
source: vb6parse/src/syntax/statements/control_flow/jump.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: x
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Newline
                  text: "\n"
            - kind: GotoStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: GotoKeyword
                  text: GoTo
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: SkipCode
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: x
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "2"
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: x
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "3"
                - kind: Newline
                  text: "\n"
            - kind: LabelStatement
              children:
                - kind: Identifier
                  text: SkipCode
                - kind: ColonOperator
                  text: ":"
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: x
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "4"
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
